<resources>
    <string name="app_name">Aquarium Plant App</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="placement">Placement</string>
    <string name="random">Random</string>

    <string name="a_to_z_common_name">Plants A-Z Common Name</string>
    <string name="a_to_z_scientific_name">Plants A-Z Scientific Name</string>

    <string name="rhizome">Rhizome</string>
    <string name="stem">Stem</string>
    <string name="floating">Floating</string>
    <string name="crown">Crown</string>
    <string name="moss">Moss</string>
    <string name="miscellaneous">Miscellaneous</string>

    <string name="foreground">Foreground</string>
    <string name="midground">Midground</string>
    <string name="background">Background</string>
    <string name="surface">Surface</string>
</resources>
