<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/rhizome_button"
        android:text="@string/rhizome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/stem_button"
        android:text="@string/stem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/floating_button"
        android:text="@string/floating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/crown_button"
        android:text="@string/crown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/moss_button"
        android:text="@string/moss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/miscellaneous_button"
        android:text="@string/miscellaneous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>